--- a/index.html
+++ b/index.html
@@ -27,13 +27,23 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
   <META HTTP-EQUIV="Content-type" CONTENT="text/html; charset=UTF-8"/>
-  <!-- =======================================================
-  * Template Name: Personal
-  * Updated: Mar 10 2023 with Bootstrap v5.2.3
-  * Template URL: https://bootstrapmade.com/personal-free-resume-bootstrap-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer','GTM-MRZQ8F3');</script>
+      <!-- End Google Tag Manager -->
+
+      <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YMN228B1WN"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-YMN228B1WN');
+    </script>
 </head>
 
 <body>
@@ -964,7 +974,26 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MRZQ8F3"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+  <!-- Scheema for profile-->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org/",
+      "@type": "Person",
+      "name": "Bhanu Prakash",
+      "url": "https://bhanuprakashsfdc.com/",
+      "image": "https://bhanuprakashsfdc.com/assets/img/b.jpg",
+      "sameAs": [
+        "https://www.linkedin.com/in/bhanu-prakash-salesforce/",
+        "https://twitter.com/bhanusfdc",
+        "https://bhanuprakashsfdc.com"
+      ],
+      "jobTitle": "Salesforce Solution Architect"  
+    }
+    </script>
 </body>
 
 </html>
