--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Bhanu Prakash - Salesforce Solution Architect</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>Bhanu Prakash - Salesforce Solution Architect | Salesforce Certified Freelance Developer</title>
+  <meta content="Hire a certified Salesforce freelance developer to build custom solutions that streamline your business processes. Expertise in Apex, Lightning, and more." name="description">
+  <meta content="Salesforce Solution Architect, Salesforce Certified Freelance Developer, Salesforce, Certified Developer, Freelance, Apex, Visualforce, Lightning, Integration, Customization, Configuration, Triggers, Workflows, Salesforce Automation, Salesforce Administration, Salesforce Security, Salesforce Analytics, Salesforce Communities, Salesforce Marketing Cloud, Salesforce Service Cloud, Salesforce Sales Cloud, Salesforce AppExchange, Salesforce Data Management, Salesforce Mobile App, Salesforce Collaboration, Salesforce Platform, Salesforce CRM" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -52,13 +52,14 @@
   <header id="header">
     <div class="container">
 
-      <h1><a href="index.html">Bhanu Prakash</a></h1>
+      <h1><a href="index.html">Bhanu Prakash <br/> Salesforce Certified Freelance Developer</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>I'm a passionate <br/>
+    <!--  <h2>I'm a passionate <br/>
         <span>Salesforce Solution Architect</span> <br/>
-        from India 🇮🇳</h2>
-
+        from India 🇮🇳</h2> -->
+      <h2>Looking for a help to streamline your business processes ? </h2>
+       
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link active" href="#header">Home</a></li>
