pushing social tags

--- a/index copy.html
+++ b/index copy.html
@@ -5,28 +5,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Bhanu Prakash - Salesforce Solution Architect</title>
-  <meta content="Bhanu Prakash is a Salesforce solution architect who speializes in building salesforce solutions and consulting services. Feel free to reach out me" name="description">
+  <title>Bhanu Prakash - Salesforce Solution Architect | Salesforce Certified Freelance Developer</title>
+  <meta content="Hire a certified Salesforce freelance developer to build custom solutions that streamline your business processes. Expertise in Apex, Lightning, and more." name="description">
   <meta content="Salesforce Solution Architect, Salesforce Certified Freelance Developer, Salesforce, Certified Developer, Freelance, Apex, Visualforce, Lightning, Integration, Customization, Configuration, Triggers, Workflows, Salesforce Automation, Salesforce Administration, Salesforce Security, Salesforce Analytics, Salesforce Communities, Salesforce Marketing Cloud, Salesforce Service Cloud, Salesforce Sales Cloud, Salesforce AppExchange, Salesforce Data Management, Salesforce Mobile App, Salesforce Collaboration, Salesforce Platform, Salesforce CRM" name="keywords">
-
-    <!-- Primary Meta Tags -->
-  <title>Bhanu Prakash - Salesforce Solution Architect </title>
-  <meta name="title" content="Bhanu Prakash - Salesforce Solution Architect ">
-  <meta name="description" content=" Bhanu Prakash is a Salesforce solution architect who specializes in building Salesforce solutions and consulting services. Feel free to reach out to me">
-
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="/">
-  <meta property="og:title" content="Bhanu Prakash - Salesforce Solution Architect ">
-  <meta property="og:description" content="Bhanu Prakash is a Salesforce solution architect who specializes in building Salesforce solutions and consulting services. Feel free to reach out to me">
-  <meta property="og:image" content="/assets/img/social.png">
-
-  <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="/">
-  <meta property="twitter:title" content="Bhanu Prakash - Salesforce Solution Architect ">
-  <meta property="twitter:description" content="Bhanu Prakash is a Salesforce solution architect who speializes in building Salesforce solutions and consulting services. Feel free to reach out to me">
-  <meta property="twitter:image" content="assets/img/social.png">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
