pushing bug fixes

--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="/">
+  <meta property="og:url" content="https://bhanuprakashsfdc.com">
   <meta property="og:title" content="Bhanu Prakash - Salesforce Solution Architect ">
   <meta property="og:description" content="Bhanu Prakash is a Salesforce solution architect who specializes in building Salesforce solutions and consulting services. Feel free to reach out to me">
-  <meta property="og:image" content="/assets/img/social.png">
+  <meta property="og:image" content="https://bhanuprakashsfdc.com/assets/img/social.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="/">
   <meta property="twitter:title" content="Bhanu Prakash - Salesforce Solution Architect ">
   <meta property="twitter:description" content="Bhanu Prakash is a Salesforce solution architect who speializes in building Salesforce solutions and consulting services. Feel free to reach out to me">
-  <meta property="twitter:image" content="assets/img/social.png">
+  <meta property="twitter:image" content="https://bhanuprakashsfdc.com/assets/img/social.png">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
