--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <header id="header">
     <div class="container">
 
-      <h1><a href="index.html">Bhanu Prakash <br/> Salesforce Certified Freelance Developer</a></h1>
+      <h1><a href="index.html">Bhanu Prakash</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
     <!--  <h2>I'm a passionate <br/>
@@ -975,11 +975,7 @@
     </div>
   </section><!-- End Contact Section -->
 
-  <div class="credits">
-    <!-- All the links in the footer should remain intact. -->
-    <!-- You can delete the links only if you purchased the pro version. -->
-    <!-- Licensing information: https://bootstrapmade.com/license/ -->
-    <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
+  <div class="credits">    
     Designed by <a href="/">Bhanu Prakash</a>
   </div>
 
