--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
   <meta property="twitter:image" content="https://bhanuprakashsfdc.com/assets/img/social.png">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link rel="icon" href="assets/img/favicon/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -71,9 +73,11 @@
   <header id="header">
     <div class="container">
 
-      <h1><a href="index.html">Bhanu Prakash</a></h1>
+     <!--   <h1><a href="index.html">Bhanu Prakash</a></h1> -->
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
+       <a href="index.html" class="mr-auto logo">
+         <img src="assets/img/logo.png" alt="" class="img-fluid img-logo">
+       </a> 
     <!--  <h2>I'm a passionate <br/>
         <span>Salesforce Solution Architect</span> <br/>
         from India 🇮🇳</h2> -->
