pushing sample new page

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           <img src="assets/img/b.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>Salesforce Solution Arcitect</h3>
+          <h3>Salesforce Solution Architect</h3>
           <p class="fst-italic">
             Helping companies streamline their business goals using Salesforce
           </p>
