pushing latest cert

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
         <a href="https://twitter.com/bhanusfdc" class="twitter" target="_blank"><i class="bi bi-twitter"></i></a>
         <a href="https://www.facebook.com/bhanuprakashsfdc/" class="facebook" target="_blank"><i class="bi bi-facebook"></i></a>
         <a href="https://www.instagram.com/bhanuprakashsalesforce/" class="instagram" target="_blank"><i class="bi bi-instagram"></i></a>
+        <a href="https://github.com/bhanuprakashsfdc" class="github" target="_blank"><i class="bi bi-github"></i></a>
       </div>
 
     </div>
@@ -365,6 +366,32 @@
           <div class="section-title">
             <h2><a href="https://trailblazer.me/id/bhanuprakashsfdc">Salesforce Certifications</a></h2>
           </div>
+        <div class="row">
+          <div class="col-lg-3 col-md-4">
+            <div class="icon-box">
+            <img src="/assets/img/cert/application.png" class="icon-cert"/> <br/>            
+            </div>
+            <div class="icon-box"> Earned on : <b>July 4, 2023</b></div>
+          </div>
+          <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
+            <div class="icon-box">
+              <img src="/assets/img/cert/dataarchitect.png" class="icon-cert"/> <br/>            
+              </div>
+              <div class="icon-box"> Earned on : <b>June 20, 2023</b></div>
+          </div>
+          <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
+            <div class="icon-box">
+              <img src="/assets/img/cert/sharing.png " class="icon-cert"/> <br/>            
+              </div>
+              <div class="icon-box"> Earned on : <b>July 4, 2023</b></div>
+          </div>
+          <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
+            <div class="icon-box">
+              <img src="/assets/img/cert/appbuilder.png " class="icon-cert"/> <br/>            
+              </div>
+              <div class="icon-box"> Earned on : <b>May 22, 2023</b></div>
+          </div>
+        </div>
         <div class="row">
           <div class="col-lg-3 col-md-4">
             <div class="icon-box">
