--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <li><a class="nav-link" href="#services">Services</a></li>
         <!--  <li><a class="nav-link" href="#portfolio">Portfolio</a></li> -->
           <li><a class="nav-link" href="#contact">Contact</a></li>
-        <!--  <li><a class="nav-link" href="https://blog.bhanuprakashsfdc.com/" target="_blank">Blog</a></li> -->
+          <li><a class="nav-link" href="https://blog.bhanuprakashsfdc.com/" target="_blank">Blog</a></li> 
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
