pushing adsense code

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta name="google-adsense-account" content="ca-pub-9627393799976246">
 
   <title>Bhanu Prakash - Salesforce Solution Architect</title>
   <meta content="Bhanu Prakash is a Salesforce solution architect who speializes in building salesforce solutions and consulting services. Feel free to reach out me" name="description">
